--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/paf
-spring.datasource.username = root
-spring.datasource.password = 54321000Ml!
+spring.datasource.url=jdbc:mysql://localhost:3306/paf
+spring.datasource.username=
+spring.datasource.password=
